--- a/src/components/Modal/AuthModal/AuthModal.module.scss
+++ b/src/components/Modal/AuthModal/AuthModal.module.scss
@@ -1,3 +1,5 @@
+@use '@/styles/helpers/responsive' as *;
+
 .overlay {
   position: fixed;
   top: 0;
@@ -10,6 +12,12 @@
   justify-content: center;
   z-index: 1000;
   backdrop-filter: blur(10px);
+
+  @include respond-to('md') {
+    padding: 1.4rem;
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 .modal {
@@ -22,6 +30,51 @@
   animation: slideUp 0.3s ease-out;
   max-height: 90vh;
   overflow-y: hidden;
+
+  @include respond-to('md') {
+    padding: 2.4rem;
+    width: 100%;
+    max-width: 100%;
+
+    .title {
+      font-size: 2.4rem;
+      margin-bottom: 1.6rem;
+      padding: 0;
+      text-wrap: auto;
+    }
+
+    .description {
+      font-size: 1.6rem;
+      width: 100%;
+      text-wrap: auto;
+    }
+
+    .buttons {
+      flex-direction: row;
+      gap: 1.6rem;
+    }
+
+    .signupButton,
+    .loginButton {
+      font-size: 1.4rem;
+    }
+
+    .signupButton {
+      background-color: transparent;
+      color: var(--color-text-base);
+      border: 1px solid var(--color-border);
+    }
+
+    .loginButton {
+      background-color: var(--color-primary);
+      color: var(--color-text-base);
+    }
+
+    .closeButton {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
+  }
 }
 
 .closeButton {
