--- a/src/app/spotify/group/[groupId]/page.module.scss
+++ b/src/app/spotify/group/[groupId]/page.module.scss
@@ -1,7 +1,13 @@
+@use '@/styles/helpers/responsive' as *;
+
 .container {
   width: 100%;
   padding: 2.4rem;
   background: var(--color-gradient-group);
+
+  @include respond-to('md') {
+    padding: 0.4rem;
+  }
 }
 
 .header {
@@ -9,6 +15,10 @@
   gap: 2.4rem;
   margin-bottom: 2.4rem;
   align-items: flex-end;
+
+  @include respond-to('md') {
+    margin-bottom: 1.4rem;
+  }
 }
 
 .cover {
@@ -16,10 +26,20 @@
   height: 23.2rem;
   border-radius: 0.4rem;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+
+  @include respond-to('md') {
+    width: 16rem;
+    height: 16rem;
+    box-shadow: none;
+  }
 }
 
 .info {
   flex: 1;
+
+  @include respond-to('md') {
+    flex: 0;
+  }
 }
 
 .type {
@@ -27,6 +47,10 @@
   text-transform: uppercase;
   color: var(--color-text-base);
   margin-bottom: 0.8rem;
+
+  @include respond-to('md') {
+    font-size: 1.2rem;
+  }
 }
 
 .title {
@@ -35,6 +59,10 @@
   color: var(--color-text-base);
   margin-bottom: 1.6rem;
   line-height: 1.1;
+
+  @include respond-to('md') {
+    font-size: 2rem;
+  }
 }
 
 .meta {
@@ -43,14 +71,26 @@
   gap: 0.8rem;
   color: var(--color-text-subdued);
   font-size: 1.4rem;
+
+  @include respond-to('md') {
+    font-size: 1.2rem;
+  }
 }
 
 .dot {
   margin: 0 0.4rem;
+
+  @include respond-to('md') {
+    margin: 0 0.2rem;
+  }
 }
 
 .section {
   margin-bottom: 3.2rem;
+
+  @include respond-to('md') {
+    margin-bottom: 2.4rem;
+  }
 }
 
 .sectionHeader {
@@ -58,12 +98,20 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.6rem;
+
+  @include respond-to('md') {
+    margin-bottom: 1.2rem;
+  }
 }
 
 .sectionTitle {
   font-size: 2.4rem;
   font-weight: 700;
   color: var(--color-text-base);
+
+  @include respond-to('md') {
+    font-size: 1.9rem;
+  }
 }
 
 .loading,
